update to new version

--- a/about.html
+++ b/about.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About | Hillside</title>
+	<title>About | Hillside In Focus</title>
 	<link rel="stylesheet" href="static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,400i,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="index.html">Hillside</a>
+  <a class="navbar-brand" href="index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -56,10 +56,10 @@
 				<div class="center photo-top">
 					<img src="images/group.jpg" alt="group photo" />
 				</div>
-				<p>Durham School for the Arts is a unique school with an extraordinary curriculum of authentic art.  As a public magnet, DSA attracts students from diverse backgrounds from all over Durham.  DSA offers eleven arts pathways including theater, band, piano, game art design, digital audio-visual production, strings, guitar, dance, visual arts, creative writing and film.  A gifted faculty brings the arts to life for DSA's 1,600 middle and senior high students.</p>
-				<p>The Duke class is called Documentary Photography: Education, Childhood and Growth. Each Duke student spent the fall semester documenting one story, either about a pathway, a student, or a group of students.   Duke students produced one of these audio-visual slide shows as well as large final prints for a public exhibit for the students, families, and staff. The website and all prints were all donated to the school as a gift. The students want to lend their support for the hard work teachers and staff put in every day to educate the children of Durham.</p>
-				<p>In the words of DSA's website:  <em>&ldquo;DSA is an active and dynamic center for arts and academic education.  School life at DSA is based on our shared culture of success and an emphasis on tolerance, diversity, personal responsibility, and respect for individual differences.  We are a school like no other. Durham School of the Arts (DSA) is a magnet school founded on the premise of providing our students with an education focused on excellence in the visual and performing arts and rigorous academics.  We believe that since our students are both participants and consumers of the arts, they will be better educated and more informed citizens.  As a result, we expect our students to be the leaders and intellectuals of tomorrow.&rdquo;</em></p>
-				<p>We are grateful to everyone at DSA: the many teachers, staff, students and parents! Thank you for letting us Focus on DSA!</p>
+                <p>Hillside High School is a unique school that provides extraordinary opportunities for its students. These programs cross a wide spectrum including Durham's only IB program, Army JROTC, a thriving drama department, and sports teams that excel. Hillside's website says they are committed "to inspire students to become globally aware citizens, lifelong learners, and responsible leaders in their communities. This will be accomplished by creating challenging learning experiences that emphasize collaboration, critical thinking, and respect for all people."</p>
+                <p>The Duke class is called Documentary Photography: Education, Childhood and Growth. Each Duke student spent the fall semester documenting one story, either about an individual, a program or a sport. Duke students produced audio-visual slide shows as well as large final prints for a public exhibit for the students, families, and staff. The website and all prints were donated to the school as a gift. The students want to lend their support for the hard work teachers and staff put in every day to educate the children of Durham.</p>
+                <p>We are grateful to everyone at Hillside: the many teachers, staff, students and parents! Thank you for letting us Focus on Hillside!</p>
+
 				<div class="center photo-bottom">
 					<img src="images/school.jpg" alt="school photo" />
 				</div>
