--- a/credits.html
+++ b/credits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Credits | Hillside</title>
+	<title>Credits | Hillside In Focus</title>
 	<link rel="stylesheet" href="static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="static/style.css">
@@ -9,15 +9,15 @@
 	<script src="static/bootstrap.bundle.js"></script>
 
 	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focusis a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="index.html">Hillside</a>
+  <a class="navbar-brand" href="index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -56,8 +56,8 @@
 				<li>Camaren Dayton</li>
 				<li>Catherine Oliver</li>
 				<li>Charles York</li>
-        <li>Charlotte Tucci</li>
-        <li>Darien Herndon</li>
+                <li>Charlotte Tucci</li>
+                <li>Darien Herndon</li>
 				<li>Defne Yorgancioglu</li>
 				<li>Harry Liang</li>
 				<li>Jesicca Wang</li>
@@ -67,9 +67,9 @@
 				<li>Sangjie Zhaxi</li>
 				<li>Shaun Taraporewalla</li>
 			</ul>
-			<h3>Site Designer &amp;<br/> Consultant</h3>
+			<h3>Web Producer</h3>
 			<ul>
-				<li>Sarah Riazati</li>
+				<li><a href="https://github.com/snggeng">Geng Sng</a></li>
 			</ul>
 			<h3>Instructor &amp;<br/> Photo Coach</h3>
 			<ul>
@@ -81,77 +81,62 @@
 			<h3>Special Thanks To:</h3>
 			<h4>Teachers &amp; Staff</h4>
 			<ul>
-				<li>David Hawks, Principal</li>
-				<li>Susan Townsend, Project Coordinator!</li>
-				<li>Ntianu Nkenge, Magnet Coordinator</li>
-				<li>Alex LeMay</li>
-				<li>Alexa Garvoille</li>
-				<li>Alice Griffeth</li>
-				<li>Amber Santibanez</li>
-				<li>Anthony Amos</li>
-				<li>Art Davis</li>
-				<li>Bob Bourgeois</li>
-				<li>Brooke Sauer</li>
-				<li>Clifton Thomas</li>
-				<li>Coach Chris Huggins</li>
-				<li>Doug Graves</li>
-				<li>Jack Watson</li>
-				<li>Jennifer Tuttle</li>
-				<li>Jody Crawford</li>
-				<li>Kenneth Davis </li>
-				<li>Kristin Winchester</li>
-				<li>Larry Downing</li>
-				<li>Marc Davis</li>
-				<li>Richard Patten</li>
-				<li>Sean Grier</li>
-				<li>Susan Townsend</li>
-				<li>Val Martinez</li>
+                <li>Dr. Logan, Principal</li>
+                <li>Angel Hope</li>
+                <li>Angelina Euba McKoy</li>
+                <li>Army JROTC Cadets</li>
+                <li>Athletic Training program</li>
+                <li>Carol Clark</li>
+                <li>Coach Carter</li>
+                <li>Coach Jaye Pratt</li>
+                <li>Coach Ovester Grays</li>
+                <li>Cross Country Team</li>
+                <li>Chief Otha Hester</li>
+                <li>Christina Amihere</li>
+                <li>Christopher Farrar</li>
+                <li>Color Purple Cast</li>
+                <li>David Madzivanyika</li>
+                <li>Earl Williams</li>
+                <li>Eden Harris</li>
+                <li>Elijah McNair</li>
+                <li>Exceptional Children Services Program</li>
+                <li>First Sergeant Jeffery Matthews</li>
+                <li>Girls Basketball Team</li>
+                <li>Hillside Dance Company</li>
+                <li>Hydeia McQueen</li>
 			</ul>
 		</section>
-		<section class="col-sm-12 col-md-3 col-lg-2 center">
-			<h4>Students:</h4>
+        
+        <section class="col-sm-12 col-md-3 col-lg-2 center">
+    		<br><br>
 			<ul>
-				<li>Advanced Guitar Class</li>
-				<li>Advanced Theater Class</li>
-				<li>Cailin Clarke</li>
-				<li>Ch&egrave; Armstrong</li>
-				<li>Chloe Lewis</li>
-				<li>Ciara Coleman</li>
-				<li>Collin Davis</li>
-				<li>DSA Cross Country Team</li>
-				<li>Eileena Boyce</li>
-				<li>Gents Program</li>
-				<li>Graham Buhrman</li>
-				<li>Ian Clark</li>
-				<li>Ismael Cornejo-Luna</li>
-				<li>Jaylen Stevens</li>
-				<li>Jeremiah Henderson</li>
-				<li>Julia Kenefick</li>
-				<li>Kati Redman</li>
-				<li>Kesia Ballard</li>
-				<li>Krister Sweeney</li>
-				<li>Lauran Jones</li>
-				<li>Madison Wheaton</li>
-				<li>Nathan Shanahan</li>
-				<li>Nicholas Mercer</li>
-				<li>Nizhoni Henry</li>
-				<li>Rachael Rice</li>
-				<li>Sauncia Smith</li>
-				<li>Science &amp; Math Students from:
-					<ul class="no-margin">
-						<li>Ms. Sauer's Class</li>
-						<li>Ms. LeMay's Class</li>
-						<li>Ms. Griffeth's Class</li>
-						<li>Ms. Tuttle's Class</li>
-					</ul>
-				</li>
-				<li>Toby Falvo</li>
-				<li>Tran Nguyen</li>
-				<li>Trey Fletcher</li>
-				<li>Victor Urbina</li>
-				<li>Yosef Crockett</li>
-			</ul>
-		</section>
+                <li>IB Program!</li>
+                <li>Jada Green</li>
+                <li>Jalen McKoy</li>
+                <li>Jazmine Warren</li>
+                <li>Jokyra Scott</li>
+                <li>Jordan Griffith</li>
+                <li>Josephus Shabbaz</li>
+                <li>Kamri Harper</li>
+                <li>Kathy Chapman</li>
+                <li>Maleiya Hill</li>
+                <li>Nelda. Caddell</li>
+                <li>Nicholas Graber-Grace</li>
+                <li>Ms. Abel</li>
+                <li>Paula Siwek</li>
+                <li>Sydnei McEachin</li>
+                <li>SGA - everyone!</li>
+                <li>Shaliyah Wilkerson</li>
+                <li>Tameka Brown</li>
+                <li>Tammy Haskill</li>
+                <li>Thetas-all of them!</li>
+                <li>Track and Field Team</li>
+                <li>Valencia Lipscomb</li>
+                <li>Valencia McQueen</li>
+                <li>Wendall Tabb</li>
+            </ul>
+            
+        </section>
 
 	</div>
 </div>
