--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+    <title>Hillside In Focus</title>
 	<link rel="stylesheet" href="static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
 	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="#">Hillside</a>
+  <a class="navbar-brand" href="#">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -68,7 +68,7 @@
 	      	</div> <!-- / .carousel-image -->
 			<a href="stories/steltenkamp.html">
 	        <div class="carousel-caption caption d-none d-md-block">
-            	<h2>From the Shadows, Into the Spotlight</h2>
+            	<h2>Behind the Curtain</h2>
 	          	<p class="author">Anna Steltenkamp</p>
 	      	</div> <!-- / .carousel-caption -->
 	    	</a>
@@ -110,7 +110,7 @@
 	      	</div> <!-- / .carousel-image -->
 	    	<a href="stories/york.html">
 	        <div class="carousel-caption caption d-none d-md-block">
-	          	<h2>Applied Civics</h2>
+	          	<h2>Teaching by Example</h2>
 	          	<p class="author">By Charles York</p>
 	      	</div> <!-- / .carousel-caption -->
 	      	</a>
@@ -222,7 +222,7 @@
 			</div> <!-- / .carousel-image -->
 			<a href="stories/sanders.html">
 			<div class="carousel-caption caption d-none d-md-block">
-				<h2>Pretty in Blue</h2>
+				<h2>I Am Resilient</h2>
 				<p class="author">By Reagan Sanders</p> 	    
 			</div>
 			</a>
@@ -236,7 +236,7 @@
 			</div> <!-- / .carousel-image -->
 			<a href="stories/zhaxi.html">
 			<div class="carousel-caption caption d-none d-md-block">
-				<h2>Jordan</h2>
+				<h2>Prepare for Takeoff</h2>
 				<p class="author">By Sangjie Zhaxi</p>
 			</div>
 			</a>
@@ -250,7 +250,7 @@
 			</div> <!-- / .carousel-image -->
 			<a href="stories/taraporewalla.html">
 			<div class="carousel-caption caption d-none d-md-block">
-				<h2>Football</h2>
+				<h2>Looking Beyond the Game</h2>
 				<p class="author">By Shaun Taraporewalla</p>
 			</div>
 			</a>
@@ -283,7 +283,7 @@
 			<a href="stories/ju.html">
 				<h2>IBelieve</h2>
 				<p class="author">By Andy Ju</p>
-				<p class="description">A unique program in the Durham school district, the IB program at Hillside High School showcases some of the brightest and most engaging students in the area.</p>
+				<p class="description">Amidst the negative standards and stereotypes binding this high school and community, the Hillside IB students have all the tools to stand up to this adversity.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -296,9 +296,9 @@
 			</a>
 			<div class="caption">
 			<a href="stories/steltenkamp.html">
-				<h2>From the Shadows, Into the Spotlight</h2>
+				<h2>Behind the Curtain</h2>
 				<p class="author">By Anna Steltenkamp</p>
-				<p class="description">Theater is about more than just the memorization and performance of lines. The real story is about the moments beyond the written script.</p>
+				<p class="description">Hillside Theater is a family with a bond beyond the written script, together achieving more than simply a performance of memorized lines.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -321,14 +321,14 @@
 
 	<div class="story col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
 		<div class="thumbnail">
-			<a href="stories/clevelaolivernd.html">
+			<a href="stories/oliver.html">
 				<img src="images/thumbnails/oliver.jpg" width="100%">
 			</a>
 			<div class="caption">
 			<a href="stories/oliver.html">
 				<h2>Mr. President</h2>
 				<p class="author">By Catherine Oliver</p>
-				<p class="description">Hillside High Schools' Student Government Association is recognized as a National Gold Council of Excellence for a reason.</p>
+				<p class="description">Hillside High School's Student Government Association is recognized as a National Gold Council of Excellence for a reason - President Jalen McKoy works tirelessly to lead an organization that serves the school community.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -341,9 +341,9 @@
 			</a>
 			<div class="caption">
 			<a href="stories/york.html">
-	          	<h2>Applied Civics</h2>
+	          	<h2>Teaching By Example</h2>
 				<p class="author">By Charles York</p>
-				<p class="description">Mr. Graber-Grace is a teacher, father and community activist implementing his lessons of democracy and equality to improve local education and our community.</p>
+				<p class="description">Mr. Graber-Grace is a civic teacher, father and community activist implementing his lessons of democracy and equality to improve local education and the Durham community.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -358,7 +358,7 @@
 			<a href="stories/tucci.html">
 				<h2>Hearts of Hillside</h2>
 				<p class="author">By Charlotte Tucci</p>
-				<p class="description">The H.E.A.R.T.S Program at Hillside is for students who have a unique role outside of the classroom – being a mother.</p>
+				<p class="description">Angel Hope is a senior in the H.E.A.R.T.S program. She impressively balances motherhood and high school, all with a smile on her face.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -373,7 +373,7 @@
 			<a href="stories/herndon.html">
 				<h2>Dance</h2>
 				<p class="author">By Darien Herndon</p>
-				<p class="description">Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk xxaldkj kja odij Alkjd.</p>
+				<p class="description">For dancers of Hillside Dance Company, the words "Dance is the hidden language of the soul" is something they can never forget as they reach for their dreams through dance.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -388,7 +388,7 @@
 			<a href="stories/yorgancioglu.html">
 				<h2>Exceptional Experiences</h2>
 				<p class="author">By Defne Yorgancioglu</p>
-				<p class="description">The Exceptional Children Services program at Hillside High School aims to create a safe, inclusive, and accessible space for individuals with disabilities.</p>
+				<p class="description">Hillside's Exception Children Services program aims to create an inclusive and accessible classroom space for all. Join these incredible students as they defy obstacles every day!</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -403,7 +403,7 @@
 			<a href="stories/liang.html">
 				<h2>Sideline Superheroes</h2>
 				<p class="author">By Harry Liang</p>
-				<p class="description">The student volunteers with the Hillside High School Athletic Training program are an integral part of the football program, making sure that the teams are set up for success.</p>
+				<p class="description">The Athletic Training program gives students a chance to pursue their dreams, help the football team, form lasting relationships, and have a ton of fun all at the same time.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -418,7 +418,7 @@
 			<a href="stories/wang.html">
 				<h2>Conquering the Hurdle</h2>
 				<p class="author">By Jessica Wang</p>
-				<p class="description">Hillside High School's girls track and field team was state champion last year. Senior Jada Green, an All-American in the heptathlon, plays a vital role in the team's success.</p>
+				<p class="description">The girl's track and field team at Hillside won the state championship last year. Team captain, Jada Green, plays a vital role in the team's success. </p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -448,7 +448,7 @@
 			<a href="stories/bitting.html">
 				<h2>Hillside's Hot Shots</h2>
 				<p class="author">By Morgan Bitting</p>
-				<p class="description">The Hillside Girls Basketball team has a tradition of success.</p>
+				<p class="description">The Hillside Girls Basketball team has a tradition of success. Junior point guard Maleiya Hill supports her team while recovering from injury.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -461,9 +461,9 @@
 			</a>
 			<div class="caption">
 			<a href="stories/sanders.html">
-				<h2>Pretty in Blue</h2>
+				<h2>I Am Resilient</h2>
 				<p class="author">By Reagan Sanders</p>
-				<p class="description">Few classes invest in the personal development as much as Junior ROTC does.</p>
+				<p class="description">These Army JROTC cadets learn American history, military traditions, and even personal finance. But lessons also extend beyond the textbook as they learn about community, leadership, and confidence.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -476,9 +476,9 @@
 			</a>
 			<div class="caption">
 			<a href="stories/zhaxi.html">
-				<h2>Jordan</h2>
+				<h2>Prepare For Takeoff</h2>
 				<p class="author">By Sangjie Zhaxi</p>
-				<p class="description">Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd.</p>
+				<p class="description">Hillside High School senior, Jordan Griffith, is ready to take off towards the future he wants. After years of long-term planning and meticulous time management, he has finally turned his passions into reality.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
@@ -491,9 +491,9 @@
 			</a>
 			<div class="caption">
 			<a href="stories/taraporewalla.html">
-				<h2>Football</h2>
+				<h2>Looking Beyond the Game</h2>
 				<p class="author">By Shaun Taraporewalla</p>
-				<p class="description">Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd.</p>
+				<p class="description">A Hillside alumnus returns back to take a look at what makes football so important to the players, fans and the community.</p>
 			</div> <!-- / .caption -->
 			</a>
 		</div> <!-- / .thumbnail -->
