--- a/stories/bitting.html
+++ b/stories/bitting.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +53,14 @@
 				<p class="author">By Morgan Bitting</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>The Hillside Girls Basketball team has a tradition of success. They have their sights set on another successful season and their seniors plan to lead the way.</p>
-				<p>Follow their journey to achieving their goals and forming bonds with their teammates along the way.</p>
+				<p>"If you ever have Hornet written on your chest, you automatically have the biggest target on your back. Even the weakest team in Durham will play their hardest against Hillside.” - Maleiya Hill, junior point guard
+                <p>After spending time with the Hillside Girls Basketball team, I am now able to understand the "target" that Maleiya refers to. There's a reason that every team plays their hardest against Hillside. These girls are special. They are talented and skilled basketball players who dedicate many hours to their sport. They train throughout the year to get stronger, faster, and quicker in order to be the best. Their passion and love for the game are evident with each practice and game they play. However, they are more than just basketball players. They are spunky girls with bold personalities. They are friends and teammates. They are Hillside Hornets.</p>
+                <p>I am so grateful to the team and staff for allowing me to be a small part of your life this semester. I wish you all nothing but the best and can't wait to follow your successes during the rest of the season and beyond. Thank you for greeting me with a smile on your face and a welcoming "hello" every day.</p>
+                <p>Maleiya - Thank you for always brightening my day and allowing me to photograph you at school, practice, and physical therapy. Your future is bright and I learned so much from you! Not many people have the work ethic that you do, or are able to wake up at 6:30 each morning to do physical therapy before school. Best of luck with your recovery, and your future with basketball and computer science.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/V17gujm6QIM?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/cm-VsPcRUmU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
