--- a/stories/dayton.html
+++ b/stories/dayton.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,13 +53,12 @@
 				<p class="author">By Camaren Dayton</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Everyday from 2:30-4:00, a group of students at Hillside High School convene in Mrs. Paula Siwek's classroom to learn the history of and practice the art of photography.</p>
-				<p>Behind the camera, Hydeia is thoughtful and diligent in her work. Her enthusiasm is contagious and carries outside of class, where she has risen as a leader for her school and her community.</p>
- 
+				<p>Upon deciding to photograph Mrs. Paula Siwek's photography class at Hillside High School, I would not have anticipated developing such a strong relationship with such an incredibly accomplished and talented student. Hydeia McQueen is intrigued by her academics, a role model and great friend to her peers, and an inspirational leader outside of the classroom as well. I first noticed this sense of motivation when visiting her photography classroom, demonstrated by her willingness to ask her teacher for assistance and share her knowledge with her classmates.</p>
+                <p>I soon learned about Hydeia's initiative to give back to her community through starting a club called Teens on the Go, which works to discourage teen gang violence and strengthen youth relationships in her residential community. Hydeia's vision and drive serves as great inspiration. One does not need to be granted a title of a leader in order to feel motivated to act as one. In looking at my photographs, I hope that Hydeia's warm heart, dedication, and appreciation for community is understood. I am very grateful for the opportunity to meet her this semester, and owe many thanks to Mrs. Paula Siwek, and to Hydeia and Valencia McQueen.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/tlkY3vjLDnE?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/1Ne_BkfT0Q8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
