--- a/stories/ju.html
+++ b/stories/ju.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +53,14 @@
 				<p class="author">By Andy Ju</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>A unique program in the Durham school district, the IB program at Hillside High School showcases some of the brightest and most engaging students in the area.</p>
-				<p>These students are choosing to stand up to the adversity within and stereotypes binding this high school and community.</p>
+				<p>There is something peculiar about how relationships are formed; it always feels that the most meaningful interactions and friendships arise when we least expect it. Going into Hillside to photograph the IB program for the first time, I thought I knew what type of subjects and topics I wanted to cover. I wanted stock photos of studious students handling lab equipment, a defining interaction between a student and I that would cement a life-long friendship, you know, the stuff of tear-jerking movies.</p>
+                <p>Instead, I met some awesome people who, as corny as this sounds, surpassed all my expectations. I met students like Josephus and Elijah, who leave me questioning why I was such a passionless and uninspired vegetable in high school. I met teachers and faculty like Ms. McKoy and Ms. Amihere who showed me what having a good relationship with faculty feels like. I wish this photographic essay could do these folks justice, but it can't - there isn't a tear-jerking movie that could. Because those people on screen are just characters, but these students, teachers, and faculty at Hillside? They're the best of real life.</p>
+                <p>Wishing YOU ALL, the best!</p>
+                <p>Andy</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/Wxa99LsgWvw?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/O-D78ETJUiQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
