--- a/stories/liang.html
+++ b/stories/liang.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside In Focus.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside In Focus.">
+	<meta name="keywords" content="Hillside in Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +53,12 @@
 				<p class="author">By Harry Liang</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>The student volunteers with the Hillside High School Athletic Training program are an integral part of the football program, making sure that the teams are set up for success and adding to the exciting environment of Friday Night Football.</p>
-				<p>For senior Kamri, the Athletic Training program is also a bridge to her future career goals.</p>
+				<p>At Hillside High School on a Friday night, the scene of a home football game for the Hornets is incomplete without the navy-blue tent, the white golf cart, the bright orange Gatorade coolers, and the smiling faces of the students and staff in Hillside High School's Athletic Training Program. The Athletic Training Program is unique in that it not only provides important assistance to the football players out on the field, but also in that it provides the students who volunteer their time with the program after school every night the valuable opportunities to make positive impacts, to demonstrate their interests in future careers in athletic training, and to form meaningful connections with one another. Through a season full of filling water bottles, laughing with one another, and dancing on the sideline of the football field and at football practices, Hillside students Kamri, Jada, Eden, Shaliyah, and Sydnei have been able to foster values of hard work, commitment, determination, and family. The program especially means a lot to senior Kamri, allowing her to show her drive and passion to achieve her goal of a career in sports medicine. Most importantly, Kamri deeply appreciates the bonds she has been able to form, bonds that she knows will last for a long time to come.</p>
+				<p>When I first visited Hillside with the intention of covering an aspect of Friday Night Football, I had no idea what to expect when I asked about the athletic trainers who help the team at practices and games. After I found out that there was a group of students who volunteered their free time after school to helping with the Athletic Training Program, I immediately knew it was something I wanted to learn more about. And I am so glad that I did. Meeting the girls, Ms. H, Gary, the NCCU Sports Medicine students, and the football players and getting to know them through the semester has been an amazing experience. Countless times I have caught myself with a smile on my face after watching the girls dance and have fun on the sideline of football games. Speaking to them about their strong desires to pursue careers in athletic training, as well as learning about how they manage their busy schedules and fit in the time to volunteer every night along with academics, athletics, and work has been inspiring, and I am in awe by the passion they have. I hope this story does justice to the Athletic Training Program, and shows why the girls deserve to be called Sideline Superheroes.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/TdxJvYnOyus?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vtEKNZAOtAs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
