--- a/stories/oliver.html
+++ b/stories/oliver.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +53,12 @@
 	          	<p class="author">By Catherine Oliver</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-        <p>Hillside High Schools' Student Government Association is recognized as a National Gold Council of Excellence for a reason.</p>
-        <p>President Jalen McKoy works day in and day out to lead an organization that not only serves their school community, but teaches students to be leaders.</p>
+                <p>Hillside High School has an incredible Student Government Association, due in part to the leadership of president Jalen McKoy. SGA works hard to ensure that their events are fun and engaging for every student, and every member of SGA understands the importance and gravity of their positions. Jalen in particular devotes his all to SGA, as he does with all of his extracurriculars. Jalen is an exceptional student, leader, friend, and son.</p>
+                <p>I want to extend my sincerest thanks to every member of SGA and Ms. Caddell. I saw how hard they worked so that other students could enjoy themselves, and it paid off - they're incredibly successful in everything they do. Every member was so kind and welcoming me to me, and I appreciated the inside look into their organization. I also want to thank Jalen's family, friends, classmates, and castmates for their generosity and willingness to be photographed. Finally, I want to thank Jalen for his kindness, graciousness, and flexibility. He was willing to let me into every part of his life, and it made my job so easy and enjoyable. I loved working on this project and I am so grateful for the opportunity to have meet so many of the amazing people at Hillside High School.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/iQmTmh5RW30?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/O9eaCIzVMZg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
