--- a/stories/parker.html
+++ b/stories/parker.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside In Focus, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +53,12 @@
 				<p class="author">By Maya Parker</p> 	    
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Want to see what happens when you stumble across the perfect blend of black female excellence, sisterhood, and pure youthful joy? Meet the Thetas. </p>
-				<p>Theta Phi Delta is a community-service based high school sorority dedicated to the pursuit of academic excellence, leadership, community service, and sisterhood.</p>
+				<p>What comes to mind when you think of sisterhood? After documenting them for the past several months, Theta Phi Delta is definitely what I envision. Theta Phi Delta is a community service based, high school organization that strives to help high school girls mold themselves into confident young ladies. Centered around the premise of promoting academic excellence, finding inner beauty, and becoming active participants in their community, Theta Phi Delta is the epitome of what all people should strive to be.</p> 
+                <p>I would like to give a special thanks to the girls of Theta Phi Delta and their brilliant leaders, Rhea and Jokyra Scott. Without them, this project would have never been possible. It has been an honor to document the Theta's beautiful story over the past few months. Their vibrant spirits and loving nature will be something I take with me always. And, I can truly say I will take that special sense of Theta sisterhood wherever I go.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/XYI3eyFrJ1E?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/qUFhcaD6b2o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
