--- a/stories/sanders.html
+++ b/stories/sanders.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,21 +45,21 @@
 <div class="container-fluid page story-page">
 	<div class="row">
 		<header class="col-sm-12 center">
-			<h2>Beyond the Bridge</h2>
+			<h2>I Am Resilient</h2>
 		</header>
 
 		<section class="row">
 			<div class="col-sm-2 offset-sm-2 col-xl-2 offset-xl-2 author-name">
-				<p class="author">By Conrad Liu</p> 		
+				<p class="author">By Reagan Sanders</p> 		
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-        <p>Few classes invest in the personal development as much as Junior ROTC does.</p>
-        <p>Its goal is to shape the work ethic of young men and women, developing integrity, community, and confidence.</p>
-				<p>They are the future of America.</p>
+                <p>What traits do you need to have to be successful? Integrity. Confidence. Responsibility. <i>Resilience</i>.</p>
+                <p>Within the hidden walls of the JROTC class, the character of young women and men is profoundly shaped by two exceptional and passionate teachers: Chief Hester and First Sergeant Matthews. Their mission to mold these teenagers into good citizens is uplifting and unique to the program; few other classes invest in each of their students' personal development as much as the JROTC teachers. Monday physical training, American history lessons, financial advice, mock job interviews, drill practice, after-school fundraising, and uniform dress-out days all contribute to the development of these confident, fine leaders of JROTC. The lessons taught will last long after their time at Hillside comes to an end.</p> 
+                <p>I thoroughly enjoyed my time with JROTC, meeting so many bright and wonderful students and seeing firsthand the enormous impact made on these young adults. Thank you Chief Hester, First Sergeant Matthews, and all the cadets for allowing me to join your class to photograph and interview (again and again and again)!</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/57VcXqAmipI?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/2anAk69lk7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
