--- a/stories/steltenkamp.html
+++ b/stories/steltenkamp.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,7 +45,7 @@
 <div class="container-fluid page story-page">
 	<div class="row">
 		<header class="col-sm-12 center">
-			<h2>From the Shadows, Into the Spotlight</h2>
+			<h2>Behind the Curtain</h2>
 		</header>
 
 		<section class="row">
@@ -53,12 +53,12 @@
 				<p class="author">By Anna Steltenkamp</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Theater is about more than just the memorization and performance of lines.</p>
-				<p>The real story is about the moments beyond the written script.</p>
+				<p>At Hillside High School, the theater department is renowned for its masterful performances. The Fall production of The Color Purple musical was no exception. The audience experienced a true work of art. Yet behind the curtain, before the stage is set and the spotlights come on for the final performance, there is a story of great importance that the audience is not in attendance to experience. This is the true story of Hillside theater. It is the story of many different, multi-faceted individuals joining together in the theater because of their mutual aspiration to create something great together, the desire to craft a true masterpiece. It is the story of a family. Hillside's theater department is a community with a bond created through their love for theater, yet one that extends far beyond the stage and lasts long after the final bow. It is the story of companionship, of personal growth, of the achievement of excellence, and of the recognition of the possibility of dreams.</p> 
+                <p>Through my documentary project, I was given the privilege to experience the story of Hillside's theater department beyond just the role as an audience member. I was able to join this family for a few weeks, even if it was only through the lens of my camera. And I am sincerely honored to have been able to partake in the journey with these exceptional students and teachers. I can attest that this theater department is truly filled with pure talent, immeasurable passion, and, most importantly, unconditional love. Thank you, Mr. Tabb and the cast of The Color Purple, for allowing me to experience this family. You are indeed an inspiration.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/UM7ouSOO2bk?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/ST-wp3ftQ2Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
