--- a/stories/wang.html
+++ b/stories/wang.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
@@ -53,12 +53,12 @@
 				<p class="author">By Jessica Wang</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Hillside High School's girls track and field team was state champion last year.</p>
-				<p>Senior Jada Green, an All-American in the heptathlon, plays a vital role in the team's success.</p>
+				<p>Hillside High School's girl's outdoor track and field team and girl's varsity basketball team have been powerhouses - both teams have won the title of State Champion for many years. Though they are extremely different sports, there is one person that ties them together: Jada Green. For four year, Jada has been balancing being on both teams. After school she will go from two hours of practice on the track to another two hours of practice on the basketball court. In both sports she is a leader for the team and sets an example of what a passionate and dedicated athlete is. Jada is an All-American in track and field and next year she will be a Division I track and field athlete at the University of Colorado.</p>
+                <p>It has been such a pleasure photographing Jada and getting to know who she is. The first time that I went to Hillside to go photograph, I asked Coach Jaye, the cross-country coach, who would be an ideal person for me to focus my project on. He immediately pointed out Jada to me, and I quickly learned why. Through photographing her for the semester, I have seen the hard work that she puts in to becoming the incredible athlete that she is. Attending her signing for the University of Colorado was the most touching experiences that I had while getting to know Jada, and I would like to thank her letting me capture so many of her experiences. </p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/-PZrBZAmfyA?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/zLFsUT0GMkk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
