--- a/stories/yorgancioglu.html
+++ b/stories/yorgancioglu.html
@@ -1,23 +1,23 @@
 s<!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focusis a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,13 +53,23 @@ s<!DOCTYPE html>
 				<p class="author">By Defne Yorgancioglu</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>The Exceptional Children Services program at Hillside High School aims to create a safe, inclusive, and accessible space for individuals with disabilities. </p>
-				<p>Join us in Mr. Williams and Ms. Abel's classroom and get a glimpse into the lives of these incredible students…</p>
- 
+<p>I <i>heard</i> Mr. Williams, Ms. Abel and Mr. Farrar's class before I ever saw them.</p>
+
+<p>Early one Monday morning, huddled in a corner of the cafeteria and not quite sure of my purpose - I heard joyous laughter. Peeking out from behind a table, I saw a group of students sitting together and having breakfast, welcoming newcomers streaming through the back door in a cloud of hugs, fist bumps, and cheers.</p>
+
+<p>If I am able to witness so much energy happiness at <i>this</i> ungodly hour, on <i>this</i> day of the week, I thought - I want to see what this class looks like on a Friday afternoon.</p>
+
+<p>And they did not disappoint.</p>
+
+<p>Over the last couple of months, I have had the privilege of getting to know this unique bunch, and the honor of being included in their activities from one step behind. I think it is interesting, let's say, to meet people through a camera, because it almost feels they are hardwired to smile at you all the time... I was fortunate enough to have moments where I could put my equipment down for a second and really <i>meet</i> these students, and I am grateful to have had the opportunity. This project granted me the incredible gift of experiencing a high school classroom without judgement or competition - a concept that some might call an oxymoron, but here, it is a reality, and it thrives every day.</p> 
+
+<p>I have also been lucky enough to happen upon quite a few highlights throughout the semester - spontaneous 5-minute dance parties, Mr. Williams' incredibly witty back-and-forths, song performances from the Lion King (along with some improv!), ridiculously thrilling bingo games, oh so many dreams of delicious food, and yes, the occasional backflip. I continue to be amazed by these students' unconditional support for each other through all of this - a quality, I suspect, that has become so natural to them that they do not even notice it anymore. It is just the way things are. There is no other way things could possibly be.</p>
+
+
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/G84eaedluPI?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/NnGTIdlsxq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
