--- a/stories/york.html
+++ b/stories/york.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,7 +45,7 @@
 <div class="container-fluid page story-page">
 	<div class="row">
 		<header class="col-sm-12 center">
-	        <h2>Applied Civics</h2>
+	        <h2>Teaching By Example</h2>
 		</header>
 
 		<section class="row">
@@ -53,7 +53,8 @@
 				<p class="author">By Charles York</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Mr. Graber-Grace is a teacher, father and community activist implementing his lessons of democracy and equality to improve local education and our community.</p>
+				<p>After a previous career as a community organizer, Mr. Graber Grace switched to teaching to help young people understand their government and be the change in their community. "Teaching by Example" chronicles the busy schedule of Mr. Graber-Grace as he balances teaching civics, improving his community, and raising his children.</p> 
+                <p>He applies his lessons of democratic thought, government fundamentals, and social change to his work with the Durham Association of Educators to advances local education and ensures quality education for all.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
