--- a/stories/zhaxi.html
+++ b/stories/zhaxi.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,7 +45,7 @@
 <div class="container-fluid page story-page">
 	<div class="row">
 		<header class="col-sm-12 center">
-			<h2>Jordan</h2>
+			<h2>Prepare for Takeoff</h2>
 		</header>
 
 		<section class="row">
@@ -53,12 +53,13 @@
 				<p class="author">By Sangjie Zhaxi</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odijlkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja od</p>
- 
+				<p>Hillside High School senior, Jordan Griffith, a recently licensed pilot, is ready to take off towards the future he wants. After years of long-term planning and meticulous time management, he has finally turned his passions into reality - he loves being in the air. As a student, Jordan juggles school work, football, aviation and flying to make this extraordinary achievement.</p>
+                <p>Photographing Jordan's life was one of the most rewarding experiences of my time at Duke, especially those moments of going up in the air with him. I was extremely lucky to know Jordan because I learned a lot about him as a person and his passion for flying as well as aviation in general. Jordan is only seventeen, but he is one of the most mature people I have ever met in his age. His sense of care for others' wellbeing and kindness is something we all should look up to.</p>
+                <p>I want to thank Jordan for welcoming me and allowing me to photograph his experiences in this particular time of his life. I admire his hard work, determination, and success. My thank also goes to Ms. Griffith, who welcomed me to their house and shared many of their stories with me.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/LpHFXZ4jm9s?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/IFJLAY_bJBQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
