--- a/stories/herndon.html
+++ b/stories/herndon.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +53,12 @@
 				<p class="author">By Darien Herndon</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk xxaldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd. </p>
-				<p>Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odijlkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja od.</p>
+				<p>My name is Darien Herndon and I have spent the last few weeks documenting a dance team from Hillside High School in Durham, NC. Hillside Dance Company is described as one of the best high school dance teams in the state. They have numerous awards including "Best Overall High School team at the 2018 North Carolina Scholastic Dance Festival." It is no doubt that this program has some of the most talented students.</p>
+                <p>As a Hillside alumna herself, Valencia Lipscomb is not only shaping her students into incredible dancers, but incredible people as well. They're joyful, dedicated, and supporting. Their relationships with each other is truly indescribable and they're not only a dance company, they are a family.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/E1puV8fL2zE?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/AuT7uIEeVGI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
