--- a/stories/taraporewalla.html
+++ b/stories/taraporewalla.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Hillside High School, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,7 +45,7 @@
 <div class="container-fluid page story-page">
 	<div class="row">
 		<header class="col-sm-12 center">
-			<h2>Football</h2>
+			<h2>Looking Beyond the Game</h2>
 		</header>
 
 		<section class="row">
@@ -53,11 +53,12 @@
 				<p class="author">By Shaun Taraporewalla</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja odij xxx Alkjd. Lkajdslfk aldkj kja odijlkjd. Lkajdslfk aldkj kja odij Alkjd. Lkajdslfk aldkj kja od</p>
+				<p>As an Alumni of Hillside High School it has been my pleasure to return and photograph some of the things that make our school special. At Hillside I always recognized that football program was an integral part of our identity - both as a player and a student. Football is able to transcend the challenges that we may face on a daily basis and transports us to a place where the entire Hillside family can come and celebrate.</p>
+                <p>The players in particular know the importance of what they do, as leaders both on and off the field. I followed David Madzivanyika a players whose exceptional performance truly embodies what it means to be a Hillside Football player. Yet despite my focus, I have to thank all of the players, coaches, and athletic assistants who make every game possible. Returning to Hillside I have had the chance to showcase what makes the game special, and how it can change you forever.</p>
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/YBzVsVn4dLE?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/HOkXZ_As0TI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
