--- a/stories/tucci.html
+++ b/stories/tucci.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hillside</title>
+	<title>Hillside In Focus</title>
 	<link rel="stylesheet" href="../static/bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="../static/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="../static/bootstrap.bundle.js"></script>
 
-	<meta property="og:title" content="Hillside" />
-	<meta name="og:description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="description" content="Hillside is a collection of photo stories documenting the lives of students at Durham School for the Arts.">
-	<meta name="keywords" content="Hillside, Durham School for the Arts, Durham School of the Arts, Center for Documentary Studies">
+	<meta property="og:title" content="Hillside In Focus" />
+	<meta name="og:description" content="Hillside In Focus is a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="description" content="Hillside In Focusis a collection of photo stories documenting the lives of students at Hillside High School.">
+	<meta name="keywords" content="Hillside In Focus, Center for Documentary Studies">
 	</head>
 
 <body>
 
 <nav id="navbar-ex" class="navbar navbar-expand-md fixed-top navbar-inverse bg-inverse">
-  <a class="navbar-brand" href="../index.html">Hillside</a>
+  <a class="navbar-brand" href="../index.html">Hillside In Focus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,13 +53,14 @@
 				<p class="author">By Charlotte Tucci</p>
 			</div>
 			<div class="col-sm-6 col-xl-6 statement">
-				<p>The H.E.A.R.T.S Program at Hillside is for students who have a unique role outside of the classroom – being a mother.</p>
-				<p>Take a look inside the life of Angel Hope, a senior who impressively balances motherhood and high school.</p>
+				<p>Angel Hope: a dedicated student and loving mother. H.E.A.R.T.S has helped Angel earn these two labels. At Hillside High, nine girls are supported by this program. Balancing high school and motherhood is not easy. However, H.E.A.R.T.S teaches the girls how to do just this. After having her daughter at the age of 15, Angel Hope changed her perspective on life. She has a deep understanding of why it is important to set goals for yourself. Over the past few years, Angel has raised a sweet little girl while impressively chasing her college dream.</p>
+                <p>Angel, thank you from the bottom of my heart for allowing me to share your story. It has been an honor to document your life over the past few months. Your love for Gabby is truly special and she is beyond lucky to have you as her mama. Keep chasing your dreams and always remember to do it with that bright smile on your face. I am so fortunate to have worked with you and am excited to forever have the bond that we now share. So much love for you, my girl!</p>
+                <p>&lt;3</p>
  
 			</div>
 			
 			<div class="col-sm-8 offset-sm-2 video-player">
-				<iframe src="https://www.youtube.com/embed/0QVSQX_i1U4?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/9tRE_3bKKmA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			
